composer change to production build

--- a/composer.json
+++ b/composer.json
@@ -68,7 +68,7 @@
             "require": "5.3.*"
         }
     },
-    "require-dev": {
+    "require": {
         "symfony/maker-bundle": "^1.33",
         "symfony/stopwatch": "5.3.*",
         "symfony/web-profiler-bundle": "5.3.*"
